hphp/hack/test/typecheck/case_type/multi_class_bad4.php.exp
File "multi_class_bad4.php", line 4, characters 11-20:
Invalid case type declaration. More than one variant of `MultiClass` could contain values with the same runtime tag (Typing[4475])
  File "multi_class_bad4.php", line 4, characters 28-28:
  This is the type `C`, which includes **instances of the class C**
  File "multi_class_bad4.php", line 4, characters 24-24:
  It overlaps with `I`, which includes **instances of the class B**
  File "multi_class_bad4.php", line 7, characters 19-24:
    via this requirement on `I`
  File "multi_class_bad4.php", line 4, characters 11-20:
  Because **instances of the class C** are also **instances of the class B**, `C` and `I` cannot be in the same case type
